apps/AxieAnalytics/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: axieanalytics-backend
  namespace: axieanalytics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: axieanalytics-backend
  template:
    metadata:
      labels:
        app: axieanalytics-backend
    spec:
      containers:
        - name: axieanalytics-backend
          image: samlapointe01/axie-analytics:backend-402
          ports:
            - containerPort: 8000
      restartPolicy: Always
